--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "test": "npm run lint"
     },
     "dependencies": {
+        "@njshaoshao/vue-logo-qrcode": "^1.0.1",
         "axios": "0.18.0",
         "element-ui": "2.4.6",
         "js-cookie": "2.2.0",
