--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "vue-qart": "^2.2.0",
         "vue-qr": "^1.5.2",
         "vue-router": "3.0.1",
+        "vue-slicksort": "^1.1.1",
         "vuex": "3.0.1"
     },
     "devDependencies": {
