--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "js-md5": "^0.7.3",
         "less": "^3.8.1",
         "less-loader": "^4.1.0",
+        "moment": "^2.22.2",
         "normalize.css": "7.0.0",
         "nprogress": "0.2.0",
         "qrcodejs2": "0.0.2",
