--- a/kitchen.yaml
+++ b/kitchen.yaml
@@ -17,7 +17,7 @@ spec:
   selector:
     app: d-kitchen
 ---
-apiVersion: apps/v1
+apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   name: d-kitchen
